# paper-summarizer-cli

./: README.md  main.py  pyproject.toml  research_assistant.toml
src/paper_summarizer_cli/: main.py
