[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paper-summarizer-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pymupdf>=1.26.5",
    "requests>=2.32.5",
]

[project.scripts]
summarize = "paper_summarizer_cli.main:main"